# quat-3d

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PHASES.md  README.md  vcpkg.json
assets/shaders/: atmos_multiscatter.slang  atmos_skyview.slang  atmos_transmittance.slang  bloom_composite.slang  bloom_down.slang  bloom_up.slang  exposure_average.slang  exposure_histogram.slang  gbuffer.slang  ibl_bake_env.slang  ibl_brdf_lut.slang  ibl_irradiance.slang  ibl_prefilter.slang  imgui.slang  lighting.slang  mesh.slang  passthrough.slang  shadow.slang  skinning.slang  taa.slang  terrain.slang  tonemap.slang  transparent.slang
assets/shaders/lib/: atmosphere.slang  ibl_common.slang  material.slang  pbr.slang  sky.slang
cmake/: CompileShaders.cmake
include/engine/animation/: animator.hpp  clip.hpp  skeleton.hpp  state_machine.hpp
include/engine/asset/: asset_manager.hpp  material_asset.hpp  mesh_asset.hpp  texture_asset.hpp
include/engine/core/: error.hpp
include/engine/editor/: editor.hpp
include/engine/nav/: navmesh.hpp
include/engine/net/: prediction.hpp  replication.hpp  transport.hpp
include/engine/physics/: physics_world.hpp
include/engine/renderer/: atmosphere_pass.hpp  bloom_pass.hpp  cloud_settings.hpp  dynamic_ibl.hpp  exposure_pass.hpp  ibl_pass.hpp  imgui_pass.hpp  lighting_pass.hpp  mesh_pass.hpp  shadow_pass.hpp  skinning_pass.hpp  taa_pass.hpp  terrain_pass.hpp  tonemap_pass.hpp  transparent_pass.hpp
include/engine/rhi/: compute_pipeline.hpp  descriptor_buffer.hpp  device.hpp  gpu_allocator.hpp  graphics_pipeline.hpp  pipeline_cache.hpp  render_graph.hpp  shader_reflection.hpp  swapchain.hpp
include/engine/scene/: behavior.hpp  components.hpp  gltf_loader.hpp  scene.hpp  scene_io.hpp
include/engine/terrain/: generator.hpp  heightmap.hpp  streamer.hpp
ports/gamenetworkingsockets/: fix-libcxx-debug-map.patch  portfile.cmake
scripts/: build-windows-release.bat
src/: main.cpp
src/animation/: animator.cpp  clip.cpp  skeleton.cpp  state_machine.cpp
src/asset/: asset_manager.cpp  material_asset.cpp
src/editor/: animation_preview.cpp  animation_preview.hpp  asset_browser.cpp  asset_browser.hpp  editor.cpp  inspector.cpp  inspector.hpp  physics_debug.cpp  physics_debug.hpp  scene_hierarchy.cpp  scene_hierarchy.hpp  scene_snapshot.cpp  scene_snapshot.hpp
src/nav/: navmesh.cpp
src/net/: prediction.cpp  replication.cpp  transport.cpp
src/physics/: physics_world.cpp
src/renderer/: atmosphere_pass.cpp  bloom_pass.cpp  dynamic_ibl.cpp  exposure_pass.cpp  ibl_pass.cpp  imgui_pass.cpp  lighting_pass.cpp  mesh_pass.cpp  pbr_reference.hpp  shadow_pass.cpp  skinning_pass.cpp  taa_pass.cpp  terrain_pass.cpp  tonemap_pass.cpp  transparent_pass.cpp
src/rhi/: compute_pipeline.cpp  descriptor_buffer.cpp  device.cpp  gpu_allocator.cpp  graphics_pipeline.cpp  pipeline_cache.cpp  render_graph.cpp  shader_reflection.cpp  swapchain.cpp  vma_impl.cpp
src/scene/: behavior.cpp  components.cpp  gltf_loader.cpp  nav_agent_system.cpp  physics_system.cpp  scene.cpp  scene_io.cpp  stb_image_impl.cpp
src/terrain/: generator.cpp  streamer.cpp
tests/: anim_smoke.cpp
triplets/: x64-linux-libcxx.cmake
triplets/toolchains/: clang-libcxx.cmake
